--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <section class="d-flex">
-  
+  <app-side-bar></app-side-bar>
   <div class="container">
     <div class="row p-3">
       <div class="card p-3">
