viewChild non-null operator, manipulando y limpiando buscador

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
 <section class="d-flex">
   <app-side-bar></app-side-bar>
-  <div class="container">
-    <div class="row p-3">
-      <div class="card p-3">
-        <input placeholder="Buscar..." type="text" class="form-control">
-      </div>
-    </div>
-  </div>
+  <app-gifs-pages class="container"></app-gifs-pages>
 </section>
